src/components/burger-constructor/burger-constructor.module.css
h1 {
	text-align: left;
}

.burgerContent {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.bunsElements {

}

.mainElements {
	display: flex;
	flex-direction: column;
	row-gap: 16px;
	max-height: 464px;
	overflow: scroll;
	overflow-x: hidden;
}

.mainElements div {
	display: flex;
/*	justify-content: stretch;*/
	align-items: center;
}

.mainElements div svg {
	width: 32px;
}

